// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a Book 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Book
    book={
      Object {
        "authors": Array [
          "Divya Manian",
        ],
        "id": "aaHXYmZLYNQC",
        "imageLinks": Object {
          "smallThumbnail": "http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=5&edge=curl&source=gbs_api",
          "thumbnail": "http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api",
        },
        "shelf": "wantToRead",
        "title": "HTML5 Boilerplate Web Development",
      }
    }
    onLoading={[MockFunction]}
    onRefresh={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "aaHXYmZLYNQC",
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="book"
      >
        <div
          className="book-top"
        >
          <div
            className="book-cover"
            style={
              Object {
                "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
              }
            }
          />
          <ChangeBookshelf
            currentShelf="wantToRead"
            onUpdateBookshelf={[Function]}
          />
        </div>
        <div
          className="book-title"
        >
          HTML5 Boilerplate Web Development
        </div>
        <div
          className="book-authors"
        >
          Divya Manian
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="book-top"
          >
            <div
              className="book-cover"
              style={
                Object {
                  "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
                }
              }
            />
            <ChangeBookshelf
              currentShelf="wantToRead"
              onUpdateBookshelf={[Function]}
            />
          </div>,
          <div
            className="book-title"
          >
            HTML5 Boilerplate Web Development
          </div>,
          <div
            className="book-authors"
          >
            Divya Manian
          </div>,
        ],
        "className": "book",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="book-cover"
                style={
                  Object {
                    "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
                  }
                }
              />,
              <ChangeBookshelf
                currentShelf="wantToRead"
                onUpdateBookshelf={[Function]}
              />,
            ],
            "className": "book-top",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "book-cover",
                "style": Object {
                  "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "currentShelf": "wantToRead",
                "onUpdateBookshelf": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "HTML5 Boilerplate Web Development",
            "className": "book-title",
          },
          "ref": null,
          "rendered": "HTML5 Boilerplate Web Development",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Divya Manian",
            "className": "book-authors",
          },
          "ref": null,
          "rendered": "Divya Manian",
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "aaHXYmZLYNQC",
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="book"
        >
          <div
            className="book-top"
          >
            <div
              className="book-cover"
              style={
                Object {
                  "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
                }
              }
            />
            <ChangeBookshelf
              currentShelf="wantToRead"
              onUpdateBookshelf={[Function]}
            />
          </div>
          <div
            className="book-title"
          >
            HTML5 Boilerplate Web Development
          </div>
          <div
            className="book-authors"
          >
            Divya Manian
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="book-top"
            >
              <div
                className="book-cover"
                style={
                  Object {
                    "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
                  }
                }
              />
              <ChangeBookshelf
                currentShelf="wantToRead"
                onUpdateBookshelf={[Function]}
              />
            </div>,
            <div
              className="book-title"
            >
              HTML5 Boilerplate Web Development
            </div>,
            <div
              className="book-authors"
            >
              Divya Manian
            </div>,
          ],
          "className": "book",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="book-cover"
                  style={
                    Object {
                      "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
                    }
                  }
                />,
                <ChangeBookshelf
                  currentShelf="wantToRead"
                  onUpdateBookshelf={[Function]}
                />,
              ],
              "className": "book-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "book-cover",
                  "style": Object {
                    "backgroundImage": "url(\\"http://books.google.com/books/content?id=aaHXYmZLYNQC&printsec=frontcover&img=1&zoom=1&edge=curl&source=gbs_api\\")",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "currentShelf": "wantToRead",
                  "onUpdateBookshelf": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "HTML5 Boilerplate Web Development",
              "className": "book-title",
            },
            "ref": null,
            "rendered": "HTML5 Boilerplate Web Development",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Divya Manian",
              "className": "book-authors",
            },
            "ref": null,
            "rendered": "Divya Manian",
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render a Book without authors and imageLinks 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Book
    book={
      Object {
        "id": "PKpPCwAAQBAJ",
        "title": "Pro React",
      }
    }
    onLoading={[MockFunction]}
    onRefresh={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "PKpPCwAAQBAJ",
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="book"
      >
        <div
          className="book-top"
        >
          <div
            className="book-cover"
          />
          <ChangeBookshelf
            currentShelf="none"
            onUpdateBookshelf={[Function]}
          />
        </div>
        <div
          className="book-title"
        >
          Pro React
        </div>
        <div
          className="book-authors"
        >
          
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="book-top"
          >
            <div
              className="book-cover"
            />
            <ChangeBookshelf
              currentShelf="none"
              onUpdateBookshelf={[Function]}
            />
          </div>,
          <div
            className="book-title"
          >
            Pro React
          </div>,
          <div
            className="book-authors"
          >
            
          </div>,
        ],
        "className": "book",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="book-cover"
              />,
              <ChangeBookshelf
                currentShelf="none"
                onUpdateBookshelf={[Function]}
              />,
            ],
            "className": "book-top",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "book-cover",
                "style": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "currentShelf": "none",
                "onUpdateBookshelf": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Pro React",
            "className": "book-title",
          },
          "ref": null,
          "rendered": "Pro React",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "book-authors",
          },
          "ref": null,
          "rendered": "",
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "PKpPCwAAQBAJ",
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="book"
        >
          <div
            className="book-top"
          >
            <div
              className="book-cover"
            />
            <ChangeBookshelf
              currentShelf="none"
              onUpdateBookshelf={[Function]}
            />
          </div>
          <div
            className="book-title"
          >
            Pro React
          </div>
          <div
            className="book-authors"
          >
            
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="book-top"
            >
              <div
                className="book-cover"
              />
              <ChangeBookshelf
                currentShelf="none"
                onUpdateBookshelf={[Function]}
              />
            </div>,
            <div
              className="book-title"
            >
              Pro React
            </div>,
            <div
              className="book-authors"
            >
              
            </div>,
          ],
          "className": "book",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="book-cover"
                />,
                <ChangeBookshelf
                  currentShelf="none"
                  onUpdateBookshelf={[Function]}
                />,
              ],
              "className": "book-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "book-cover",
                  "style": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "currentShelf": "none",
                  "onUpdateBookshelf": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Pro React",
              "className": "book-title",
            },
            "ref": null,
            "rendered": "Pro React",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
              "className": "book-authors",
            },
            "ref": null,
            "rendered": "",
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
